--- a/Backend en SpringBoot/pom.xml
+++ b/Backend en SpringBoot/pom.xml
@@ -49,6 +49,11 @@
 			<scope>runtime</scope>
                         
                 </dependency>
+                <dependency>
+                    <groupId>org.apache.httpcomponents</groupId>
+                    <artifactId>httpclient</artifactId>
+                    <scope>test</scope>
+                </dependency>
 
 	</dependencies>
 
